2.5 -> 2.5.1:
	- fail if sources are not regular files
	- wasn't catching readLine() errors
	- fixed (hopefully) temp file creation problems
	- make %doc obey --test
	- unlink before writing .rpms
	- librpm.c: added headerGzRead()/headerGzWrite()
	- set bzip2path via lib-rpmrc/configure (Toshio Kuratomi)

2.4.109 -> 2.5:
	- fixed return code bug in build code
	- do macro expansion before %if processing
	- dep ordering returns w/ an error as soon as a prereq loop is found
	- autoreqprov flag was being ignored during builds
	- add autoreq: and autoprov:
	- missed a few unlink() when scripts failed
	- freePrefixes wasn't initialized in runScript()
	- fix typo in %triggerpostun generation
	- include icons in source packages
	- headerGetEntry() should return count of 1 when returning
          strings plucked from i18n strings
	- do not remove comments in scripts
	- save/restore existing arch when done with buildarch
	- copy the I18N table to the source header so i18n stuff works
	- fixed multiple memory leaks in install code
	- fixed bug in part recognition
	- shared files weren't being handled properly in net shared paths

2.4.108 -> 2.4.109:
        - remove icons with --rmsource
        - do dependecy generation on -bl
        - check files on all packages on -bl
	- integrate Jeff Johnson's memleak patches
	- added OSF1 autodep scripts

2.4.107 -> 2.4.108:
        - make --clean work with no %setup
	- fixed FSSIZES problem introduced in 2.4.107
	- fixed search for find-requires.sh
	- improved solaris autodeps scripts
	- automated (somewhat) the -static flag

2.4.106 -> 2.4.107:
	- --nomd5 wasn't handled properly
	- updated configure.in find-req and find-prov checks (Tim Mooney)
        - make --rmsource actually work
	- run postun triggers

2.4.105 -> 2.4.106:
	- build: only check for non-printables in first 128 chars
	- added %triggerpostun
	- linux.req generates deps for shared libs
	- added a CC=@CC@ to popt/Makefile.in