@@ -31,6 +31,7 @@ Significant code, ideas, or porting help have been contributed by:
 	Michael Nyquisk
 	Steve Sanbeg
 	Tyson Sawyer
+	Christopher Seawood
 	Johnie Stafford
 	Gary Thomas
 	Bob Tanner
