@@ -6,6 +6,8 @@
 	- unlink before writing .rpms
 	- librpm.c: added headerGzRead()/headerGzWrite()
 	- set bzip2path via lib-rpmrc/configure (Toshio Kuratomi)
+	- added finish translation (Raimo Koski)
+	- prefer db_185.h to db.h (Christopher Seawood)
 
 2.4.109 -> 2.5:
 	- fixed return code bug in build code
